TODO
* Look into slow processing when using wincrypt
* CCM add separate function for authentication data support
* complete CFB suport
* add OFB suport ?
* add restriction that context should be used in the mode the keys were set ?
  does not work for CCM

Tests:
* integrate test runner into tests
* add pycaes ECB and XTS encryption tests
* add tests
  - CFB
  - OFB ?
  - XTS (add more test vectors?) 256-bit
  - make sure to test non-16 byte aligned data for the different implementations

Windows:
* WinXP no AES support ?
* WINAPI initialize provider only once - where to stick the init functions ?
* wincrypt and EVP - make sure to pass block sized blocks ?

20160217
* applied updates
* worked on tests

20160110
* worked on Python 3 support

20160107
* 2016 update

20151221
* applied updates

20151205
* worked on Python bindings

20150514
* worked on Python bindings

20150404
* worked on Python bindings

20150403
* worked on Python bindings

20141225
* fix for AES_cbc_encrypt side behavior

20150104
* 2015 update

20141018
* changes for deployment

20141012
* worked on utility scripts

20140920
* changes for project site move

20140731
* Added HAVE_DLLMAIN support
* updated msvscpp files

20140112
* 2014 update
* updated dependencies

20130813
* fixed issue not freeing error state memory allocated by EVP
* fixed missing libcrypto in .pc and .spec

20130716
* worked on tests

20130715
* worked on tests

20130714
* worked on moving XTS support from libfvde
* worked on tests

20130404
* textual changes
* updated dependencies

20130331
* Initial stand-alone version based on earlier work
