@@ -1,0 +1,10 @@
+coverage:
+  precision: 2
+  round: down
+  range: 70...100
+  status:
+    project: true
+    patch: true
+    changes: false
+  ignore:
+    - "tests/*"
