@@ -9,10 +9,12 @@ compiler:
   - gcc
 before_install:
   - if test `uname -s` = 'Darwin'; then brew update && brew install gettext gnu-sed && brew link --force gettext; fi
-  - if test `uname -s` = 'Linux'; then sudo apt-get update && sudo apt-mark hold postgresql-9.2 postgresql-9.3 postgresql-9.4 postgresql-client postgresql-client-common postgresql-common postgresql-contrib-9.2 postgresql-contrib-9.3 postgresql-contrib-9.4 postgresql-doc && sudo apt-get --fix-missing -o Dpkg::Options::="--force-confold" upgrade -y && sudo apt-get install -y autopoint; fi
+  - if test `uname -s` = 'Linux'; then sudo apt-get update && sudo apt-mark hold postgresql-9.2 postgresql-9.3 postgresql-9.4 postgresql-9.5 postgresql-client postgresql-client-common postgresql-common postgresql-contrib-9.2 postgresql-contrib-9.3 postgresql-contrib-9.4 postgresql-contrib-9.5 postgresql-doc && sudo apt-get --fix-missing -o Dpkg::Options::="--force-confold" upgrade -y && sudo apt-get install -y autopoint; fi
 install:
   - if test `uname -s` = 'Darwin'; then export SED="/usr/local/bin/gsed"; fi
   - ./synclibs.sh && ./autogen.sh
 script:
   - if test `uname -s` = 'Linux'; then export PATH=$(echo $PATH | tr ":" "\n" | sed '/\/opt\/python/d' | tr "\n" ":" | sed "s/::/:/g"); fi
   - ./runtests.sh
+after_success:
+  - if test `uname -s` = 'Linux' && test "$CC" = "gcc"; then curl -o codecov.sh -s https://codecov.io/bash && /bin/bash ./codecov.sh; fi
