@@ -1,6 +1,6 @@
 dnl Functions for wincrypt
 dnl
-dnl Version: 20130714
+dnl Version: 20160802
 
 dnl Function to detect whether a certain #define is present in a certain WINAPI header
 AC_DEFUN([AX_WINCRYPT_CHECK_WINAPI_DEFINE],
@@ -19,25 +19,34 @@ AC_DEFUN([AX_WINCRYPT_CHECK_WINAPI_DEFINE],
     [[]] )],
    [ac_cv_winapi_define_$2=yes],
    [ac_cv_winapi_define_$2=no])
-   AC_LANG_POP(C) ])
+   AC_LANG_POP(C)
+  ])
  ])
 
 dnl Function to detect if wincrypt functions are available
 AC_DEFUN([AX_WINCRYPT_CHECK_LIB],
- [AC_CHECK_HEADERS(
-  [wincrypt.h],
-  [],
-  [],
-  [#include <windows.h>])
-
- AS_IF(
-  [test "x$ac_cv_header_wincrypt" = xno],
+ [AS_IF(
+  [test "x$ac_cv_enable_winapi" != xyes],
   [ac_cv_wincrypt=no],
-  [AC_SUBST(
-   [LIBCRYPTO_LIBADD],
-   [-ladvapi32])
+  [AC_CHECK_HEADERS(
+   [wincrypt.h],
+   [],
+   [],
+   [#include <windows.h>])
 
-  ac_cv_wincrypt=libadvapi32])
+  AS_IF(
+   [test "x$ac_cv_header_wincrypt" = xno],
+   [ac_cv_wincrypt=no],
+   [AC_SUBST(
+    [LIBCRYPTO_LIBADD],
+    [-ladvapi32])
+
+   ac_cv_wincrypt=libadvapi32])
+  ])
+
+ AM_CONDITIONAL(
+  [HAVE_WINCRYPT],
+  [test "x$ac_cv_wincrypt" != xno])
  ])
 
 dnl Function to detect if wincrypt MD5 functions are available
@@ -62,6 +71,18 @@ AC_DEFUN([AX_WINCRYPT_CHECK_SHA1],
   [test "x$ac_cv_winapi_define_CALG_SHA1" = xyes],
   [ac_cv_wincrypt_sha1=libadvapi32],
   [ac_cv_wincrypt_sha1=local])
+ ])
+
+dnl Function to detect if wincrypt SHA224 functions are available
+AC_DEFUN([AX_WINCRYPT_CHECK_SHA224],
+ [AX_WINCRYPT_CHECK_WINAPI_DEFINE(
+  [wincrypt.h],
+  [CALG_SHA_224])
+
+ AS_IF(
+  [test "x$ac_cv_winapi_define_CALG_SHA_224" = xyes],
+  [ac_cv_wincrypt_sha224=libadvapi32],
+  [ac_cv_wincrypt_sha224=local])
  ])
 
 dnl Function to detect if wincrypt SHA256 functions are available
