@@ -4,6 +4,7 @@ MSVSCPP_FILES = \
 	caes_test_crypt_cfb/caes_test_crypt_cfb.vcproj \
 	caes_test_crypt_ecb/caes_test_crypt_ecb.vcproj \
 	caes_test_crypt_xts/caes_test_crypt_xts.vcproj \
+	caes_test_error/caes_test_error.vcproj \
 	caes_test_get_version/caes_test_get_version.vcproj \
 	libcaes/libcaes.vcproj \
 	libcerror/libcerror.vcproj \
