@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
-	Name="caes_test_get_version"
-	ProjectGUID="{E5055155-4AB3-4E5D-9E7B-33ADAF47D0B0}"
-	RootNamespace="caes_test_get_version"
+	Name="caes_test_error"
+	ProjectGUID="{CE11F0FB-D2A9-499C-B7EE-C1801895C7B4}"
+	RootNamespace="caes_test_error"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="131072"
 	>
@@ -176,7 +176,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\tests\caes_test_get_version.c"
+				RelativePath="..\..\tests\caes_test_error.c"
 				>
 			</File>
 		</Filter>
