@@ -36,6 +36,12 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "caes_test_crypt_xts", "caes
 		{20FFC4C9-F44C-45F6-A827-4819B4DF3C9F} = {20FFC4C9-F44C-45F6-A827-4819B4DF3C9F}
 	EndProjectSection
 EndProject
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "caes_test_error", "caes_test_error\caes_test_error.vcproj", "{CE11F0FB-D2A9-499C-B7EE-C1801895C7B4}"
+	ProjectSection(ProjectDependencies) = postProject
+		{42F15139-E2EE-45FC-BE59-E800D341D7FB} = {42F15139-E2EE-45FC-BE59-E800D341D7FB}
+		{20FFC4C9-F44C-45F6-A827-4819B4DF3C9F} = {20FFC4C9-F44C-45F6-A827-4819B4DF3C9F}
+	EndProjectSection
+EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "caes_test_get_version", "caes_test_get_version\caes_test_get_version.vcproj", "{E5055155-4AB3-4E5D-9E7B-33ADAF47D0B0}"
 	ProjectSection(ProjectDependencies) = postProject
 		{42F15139-E2EE-45FC-BE59-E800D341D7FB} = {42F15139-E2EE-45FC-BE59-E800D341D7FB}
@@ -88,6 +94,10 @@ Global
 		{B5B94AAD-F957-4739-B185-BDE81BAE9F5E}.Release|Win32.Build.0 = Release|Win32
 		{B5B94AAD-F957-4739-B185-BDE81BAE9F5E}.VSDebug|Win32.ActiveCfg = VSDebug|Win32
 		{B5B94AAD-F957-4739-B185-BDE81BAE9F5E}.VSDebug|Win32.Build.0 = VSDebug|Win32
+		{CE11F0FB-D2A9-499C-B7EE-C1801895C7B4}.Release|Win32.ActiveCfg = Release|Win32
+		{CE11F0FB-D2A9-499C-B7EE-C1801895C7B4}.Release|Win32.Build.0 = Release|Win32
+		{CE11F0FB-D2A9-499C-B7EE-C1801895C7B4}.VSDebug|Win32.ActiveCfg = VSDebug|Win32
+		{CE11F0FB-D2A9-499C-B7EE-C1801895C7B4}.VSDebug|Win32.Build.0 = VSDebug|Win32
 		{E5055155-4AB3-4E5D-9E7B-33ADAF47D0B0}.Release|Win32.ActiveCfg = Release|Win32
 		{E5055155-4AB3-4E5D-9E7B-33ADAF47D0B0}.Release|Win32.Build.0 = Release|Win32
 		{E5055155-4AB3-4E5D-9E7B-33ADAF47D0B0}.VSDebug|Win32.ActiveCfg = VSDebug|Win32
